[package]
name = "tesero-sol"
version = "0.1.0"
authors = ["yakmanyakmanyedatsme <wfrancis@fordham.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
dioxus-free-icons = { version = "0.8.6", features = ["font-awesome-solid"] }
surrealdb = {version = "1.5.3", features = [
	"protocol-http",
	"protocol-ws",
	"rustls",
]}
serde_json = "1.0.117"
tokio = "1.38.0"
log = "0.4.21"
chrono = "0.4.38"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
